<resources>
    <string name="app_name">Foododo</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Preferences -->
    <string name="preferences_title_message">Select all that apply to you</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="lactose">Lactose intolerance</string>
    <string name="peanut">Peanut allergy</string>
    <string name="select">select</string>
    <string name="select_preferences">Here will your prefrences be displayed, once you select one (or more)!</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="menu_actoin_setting">Setting</string>
    <string name="account">account</string>
    <string name="groups">groups</string>
    <string name="recipes">Recipes</string>
    <string name="friends">friends</string>
    <string name="log_out">Log Out</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="name">name</string>
    <string name="name01">Name</string>
    <string name="friend_01">Friend 01</string>
    <string name="friend_03">Friend 03</string>
    <string name="friend_02">Friend 02</string>
    <string name="welcome">Welcome</string>
    <string name="name1">Name</string>
    <string name="add">add</string>
    <string name="group_1">Group 1</string>
    <string name="group_2">Group 2</string>
    <string name="group_3">Group 3</string>
    <string name="recipe03">recipe03</string>
    <string name="recipe01">recipe01</string>
    <string name="recipe02">recipe02</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="namePerson">Name</string>
    <string name="users">Users</string>
    <string name="choose_recipe">Choose recipe</string>
    <string name="are_you_at_diner">Are you at diner?</string>
    <string name="availible_tongiht">Availible Tongiht</string>
    <string name="maybe">Maybe</string>
    <string name="not_availible">Not Availible</string>
    <string name="choose_recipe01">Choose Recipe</string>
    <string name="nameUser">Name</string>
    <string name="age">Age</string>
    <string name="preferences">Preferences</string>
    <string name="account1">Account</string>

</resources>
