<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="MissingDefaultResource">

    <item
        android:id="@+id/action_setting"
        android:title="@string/menu_actoin_setting"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/account"
        android:title="@string/account"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/groups"
        android:title="@string/groups"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/Recipes"
        android:title="@string/recipes"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/friends"
        android:title="@string/friends"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/logout"
        android:title="@string/log_out"
        app:showAsAction="never"
        />
</menu>