<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollIndicators="right"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarSize="@dimen/activity_vertical_margin"
    android:scrollbarStyle="insideOverlay"
    android:scrollbarTrackVertical="?android:attr/fastScrollTrackDrawable"
    android:scrollbars="vertical"
    tools:context=".RecipeActivity">

    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="352dp"
        android:layout_height="107dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/todo"
        android:paddingStart="0dp"
        android:paddingEnd="250dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton9"
        app:srcCompat="@mipmap/ic_launcher" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="352dp"
        android:layout_height="107dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="54dp"
        android:contentDescription="@string/todo"
        android:paddingStart="0dp"
        android:paddingEnd="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton8"
        app:srcCompat="@mipmap/ic_launcher" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="352dp"
        android:layout_height="107dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/recipe01"
        android:paddingStart="0dp"
        android:paddingEnd="250dp"
        app:layout_constraintBottom_toTopOf="@+id/imageButton9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton7"
        app:srcCompat="@mipmap/ic_launcher" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="352dp"
        android:layout_height="107dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/recipe02"
        android:paddingStart="0dp"
        android:paddingEnd="250dp"
        app:layout_constraintBottom_toTopOf="@+id/imageButton8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bRecipe01"
        app:srcCompat="@mipmap/ic_launcher" />

    <ImageButton
        android:id="@+id/bRecipe01"
        android:layout_width="352dp"
        android:layout_height="107dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/recipe03"
        android:paddingStart="0dp"
        android:paddingEnd="250dp"
        app:layout_constraintBottom_toTopOf="@+id/imageButton7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

</android.support.constraint.ConstraintLayout>