<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:outlineAmbientShadowColor="@color/colorAccent"
    tools:context=".Tonights_recipeActivity"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="44dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/are_you_at_diner"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="@+id/checkBox"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="143dp"
        android:background="@android:color/holo_red_dark"
        android:buttonTint="@android:color/background_light"
        android:checked="false"
        android:clickable="false"
        android:focusable="auto"
        android:lines="@android:integer/config_longAnimTime"
        android:orientation="horizontal"
        android:outlineAmbientShadowColor="@color/colorAccent"
        android:outlineProvider="bounds"
        android:outlineSpotShadowColor="@color/colorAccent"
        android:shadowDx="100"
        android:shadowDy="100"
        android:text="@string/availible_tongiht"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_red_dark"
        android:text="@string/maybe"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/checkBox"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="142dp"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_red_dark"
        android:text="@string/not_availible"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="@+id/checkBox3"
        app:layout_constraintTop_toBottomOf="@+id/checkBox3" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="92dp"
        android:layout_height="89dp"
        android:layout_marginBottom="12dp"
        android:background="@android:color/holo_red_dark"
        app:layout_constraintBottom_toTopOf="@+id/imageButton4"
        app:layout_constraintStart_toStartOf="@+id/imageButton4"
        app:srcCompat="@mipmap/ic_launcher" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="92dp"
        android:layout_height="90dp"
        android:layout_marginTop="22dp"
        android:background="@android:color/holo_red_dark"
        app:layout_constraintStart_toStartOf="@+id/imageButton5"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="88dp"
        android:layout_height="89dp"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="32dp"
        android:background="@android:color/holo_red_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="88dp"
        android:layout_height="87dp"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="32dp"
        android:background="@android:color/holo_red_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/choose_recipe01"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/imageButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>